--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
+    "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "vite": "^5.1.6"
   }
